src/App.scss
.wrapper {
  margin: 0 auto;
  width: 70%;
  padding: 48px 0 20px;

  .emptyState {
    padding-top: 40px;
    font-size: 16px;
    text-align: center;
  }

  header {
    display: flex;
    justify-content: flex-end;

    .logo {
      width: 25%;
    }

    button {
      background-color: transparent;
      border: none;
      cursor: pointer;
      margin-left: 37%;
    }
  }

  .filters {
    padding: 24px 0;

    span {
      width: 112px;
      display: inline-block;
    }
  }

  .products {
    display: flex;
    justify-content: space-between;
    align-content: space-between;
    flex-wrap: wrap;

    .product {
      width: 48%;
      padding-bottom: 28px;
      position: relative;

      img {
        width: 100%;
      }

      button {
        width: 128px;
        height: 32px;
        background-color: white;
        border: 1px solid black;
        border-radius: 2px;
        font-size: 14px;
        cursor: pointer;
        position: absolute;
        bottom: 64px;
        right: 12px;
      }

      .availability {
        width: 128px;
        height: 32px;
        background-color: red;
        border-radius: 2px;
        text-align: center;
        vertical-align: middle;
        font-size: 16px;
        line-height: 38px;
        position: absolute;
        bottom: 100px;
        right: 12px;
      }

      .productDetails {
        display: flex;
        justify-content: space-between;
        max-width: 100%;
        padding-top: 4px;

        span {
          white-space: nowrap;
          font-size: 16px;
        }

        .size {
          padding-right: 12px;
        }
      }
    }
  }
}

